<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/toprecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginTop="@dimen/_5sdp" />
        <LinearLayout
            android:id="@+id/SliderDots"
            android:layout_below="@+id/viewPager"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Style_com_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/tending"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textSize="@dimen/_14ssp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/grid_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@color/bottomviewcolor"
             />
        <TextView
            style="@style/Style_com_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/deals"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textSize="@dimen/_14ssp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/deals_recycler"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:background="@color/bottomviewcolor"/>
        <TextView
            style="@style/Style_com_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/categories"
            android:textSize="@dimen/_14ssp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_150sdp"
                    app:cardBackgroundColor="@color/teal_700"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categories_1"
                        android:layout_gravity="center">

                    </ImageView>


                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Style_com_detail"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/men" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_150sdp"
                    app:cardBackgroundColor="@color/teal_700"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categories_2"
                        android:layout_gravity="center">

                    </ImageView>


                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Style_com_detail"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/hradphone" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_150sdp"
                    app:cardBackgroundColor="@color/teal_700"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categories_3"
                        android:layout_gravity="center">

                    </ImageView>


                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Style_com_detail"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:text="Menpant" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/_150sdp"
                    app:cardBackgroundColor="@color/teal_700"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categories_4"
                        android:layout_gravity="center">

                    </ImageView>


                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/Style_com_detail"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:text="@string/backpacks" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:cardCornerRadius="@dimen/_150sdp"
                        app:cardBackgroundColor="@color/teal_700"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/categories_5"
                            android:layout_gravity="center">

                        </ImageView>


                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/Style_com_detail"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/kurtaset" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:cardCornerRadius="@dimen/_150sdp"
                        app:cardBackgroundColor="@color/teal_700"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/categories_6"
                            android:layout_gravity="center">

                        </ImageView>


                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/Style_com_detail"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/jewellory" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:cardCornerRadius="@dimen/_150sdp"
                        app:cardBackgroundColor="@color/teal_700"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/categories_7"
                            android:layout_gravity="center">

                        </ImageView>


                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/Style_com_detail"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/footwear" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        app:cardCornerRadius="@dimen/_150sdp"
                        app:cardBackgroundColor="@color/teal_700"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/categories_8"
                            android:layout_gravity="center">

                        </ImageView>


                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/Style_com_detail"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/bath" />
                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</LinearLayout>

